several code clean-ups for Java 11